--- a/d21 24 黃柏翔website-20250318T021804Z-001/d21 24 黃柏翔website/index.html
+++ b/d21 24 黃柏翔website-20250318T021804Z-001/d21 24 黃柏翔website/index.html
@@ -20,6 +20,10 @@
 
 <map name="Map" id="Map">
   <area shape="rect" coords="891,10,1012,54" href="food.html" />
+  <area shape="rect" coords="810,14,877,51" href="home.html" />
+  <area shape="rect" coords="1020,12,1146,53" href="callme.html" />
+  <area shape="rect" coords="1160,12,1267,55" href="aboutme.html" />
+  <area shape="rect" coords="660,48,787,163" href="car.html" />
 </map>
 </body>
 </html>
